@@ -6,9 +6,6 @@
 .slick-wrapper,
 .slick,
 .slick * {
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
